tools/qmllint/checkidentifiers.cpp
@@ -58,7 +58,10 @@ private:
 static const QStringList unknownBuiltins = {
     QStringLiteral("alias"),    // TODO: we cannot properly resolve aliases, yet
     QStringLiteral("QJSValue"), // We cannot say anything intelligent about untyped JS values.
-    QStringLiteral("variant"),  // Same for generic variants
+
+    // Same for generic variants
+    QStringLiteral("variant"),
+    QStringLiteral("var")
 };
 
 void CheckIdentifiers::printContext(
