tests/auto/qml/qmllint/data/var.qml
@@ -1,0 +1,9 @@
+import QtQml
+
+QtObject {
+    readonly property variant x: [0]
+    readonly property var y: [0]
+
+    readonly property int lenX: x.length
+    readonly property int lenY: y.length
+}
